--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-native": "0.64.0",
     "react-native-flash-message": "^0.1.23",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-get-location": "^2.1.0",
     "react-native-modal": "^11.10.0",
     "react-native-reanimated": "^2.1.0",
     "react-native-safe-area-context": "^3.2.0",
